== Redmine changelog

Redmine - project management software
Copyright (C) 2006-2012  Jean-Philippe Lang
http://www.redmine.org/

== TBD v1.4.6

* Defect #12409: Git: changesets aren't read after clear_changesets call

== 2012-11-17 v1.4.5

* Defect #10818: Running rake in test environment causes exception
* Defect #11192: Make repository identifier accept underscores
* Defect #11298: Issue API may not work on Ruby 1.9 in Redmine 1.4
* Defect #11307: Can't filter for negative numeric custom fields
* Defect #11365: Attachment description length is not validated
* Defect #11541: Version sharing is missing in the REST API
* Defect #11665: New document category is not saved properly 
* Defect #11789: Edit section links broken with h5/h6 headings
* Defect #11966: 404 Error when switching mode in view revision differences in non-main repo
* Defect #12189: No tmp/pdf directory
* Defect #12196: "Page not found" on OK button in SCM "View all revisions" page
* Feature #11338: Exclude emails with auto-submitted => auto-generated
* Patch #9732: German translations
* Patch #11261: Simplified Chinese translation for configurable session lifetime and timeout
* Patch #11328: Fix Japanese mistranslation for 'label_language_based'
* Patch #11406: German translation for configurable session lifetime and timeout
* Patch #11448: Russian translation for 1.4-stable and 2.0-stable
* Patch #11600: Fix plural form of the abbreviation for hours in Brazilian Portuguese

== 2012-06-18 v1.4.4

* Defect #10688: PDF export from Wiki - Problems with tables
* Defect #11061: Cannot choose commit versions to view differences in Git/Mercurial repository view
* Defect #11112: REST API - custom fields in POST/PUT ignored for time_entries
* Defect #11133: Wiki-page section edit link can point to incorrect section
* Defect #11160: SQL Error on time report if a custom field has multiple values for an entry
* Defect #11178: Spent time sorted by date-descending order lists same-date entries in physical order